[package]
name = "dojarunner"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary

[[bin]]
name = "pon"
path = "src/pon.rs"

[[bin]]
name = "lon"
path = "src/lon.rs"
